tests/instantiating/invalid/range_prop_negative_value/bus.fbd
Main bus
	C config; range = -127
